// Vitest Snapshot v1

exports[`inline-component > empty 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {},
          "children": [],
          "data": {
            "hName": "component",
            "hProperties": {},
          },
          "fmAttributes": {},
          "name": "component",
          "position": {
            "end": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "textComponent",
        },
        {
          "position": {
            "end": {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
            "start": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
          },
          "type": "text",
          "value": " text",
        },
      ],
      "position": {
        "end": {
          "column": 16,
          "line": 1,
          "offset": 15,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 16,
      "line": 1,
      "offset": 15,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline-component > strong 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "attributes": {
                "class": "class",
              },
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 18,
                      "line": 1,
                      "offset": 17,
                    },
                    "start": {
                      "column": 14,
                      "line": 1,
                      "offset": 13,
                    },
                  },
                  "type": "text",
                  "value": "text",
                },
              ],
              "data": {
                "hName": "component",
                "hProperties": {
                  "class": "class",
                },
              },
              "fmAttributes": {},
              "name": "component",
              "position": {
                "end": {
                  "column": 27,
                  "line": 1,
                  "offset": 26,
                },
                "start": {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "textComponent",
            },
          ],
          "position": {
            "end": {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "strong",
        },
      ],
      "position": {
        "end": {
          "column": 29,
          "line": 1,
          "offset": 28,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 29,
      "line": 1,
      "offset": 28,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline-component > text 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {},
          "children": [
            {
              "position": {
                "end": {
                  "column": 16,
                  "line": 1,
                  "offset": 15,
                },
                "start": {
                  "column": 12,
                  "line": 1,
                  "offset": 11,
                },
              },
              "type": "text",
              "value": "text",
            },
          ],
          "data": {
            "hName": "component",
            "hProperties": {},
          },
          "fmAttributes": {},
          "name": "component",
          "position": {
            "end": {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "textComponent",
        },
        {
          "position": {
            "end": {
              "column": 22,
              "line": 1,
              "offset": 21,
            },
            "start": {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
          },
          "type": "text",
          "value": " text",
        },
      ],
      "position": {
        "end": {
          "column": 22,
          "line": 1,
          "offset": 21,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline-component > underlined 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "attributes": {
                "class": "class",
              },
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 18,
                      "line": 1,
                      "offset": 17,
                    },
                    "start": {
                      "column": 14,
                      "line": 1,
                      "offset": 13,
                    },
                  },
                  "type": "text",
                  "value": "text",
                },
              ],
              "data": {
                "hName": "component",
                "hProperties": {
                  "class": "class",
                },
              },
              "fmAttributes": {},
              "name": "component",
              "position": {
                "end": {
                  "column": 27,
                  "line": 1,
                  "offset": 26,
                },
                "start": {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "textComponent",
            },
          ],
          "position": {
            "end": {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "strong",
        },
      ],
      "position": {
        "end": {
          "column": 29,
          "line": 1,
          "offset": 28,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 29,
      "line": 1,
      "offset": 28,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline-component > with-attribute 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {
            "class": "class",
          },
          "children": [
            {
              "position": {
                "end": {
                  "column": 16,
                  "line": 1,
                  "offset": 15,
                },
                "start": {
                  "column": 12,
                  "line": 1,
                  "offset": 11,
                },
              },
              "type": "text",
              "value": "text",
            },
          ],
          "data": {
            "hName": "component",
            "hProperties": {
              "class": "class",
            },
          },
          "fmAttributes": {},
          "name": "component",
          "position": {
            "end": {
              "column": 25,
              "line": 1,
              "offset": 24,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "textComponent",
        },
        {
          "position": {
            "end": {
              "column": 30,
              "line": 1,
              "offset": 29,
            },
            "start": {
              "column": 25,
              "line": 1,
              "offset": 24,
            },
          },
          "type": "text",
          "value": " text",
        },
      ],
      "position": {
        "end": {
          "column": 30,
          "line": 1,
          "offset": 29,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 30,
      "line": 1,
      "offset": 29,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
